tests/frontend/fail/array/out_of_bounds_inv.act
contract B

contract A

constructor
interface constructor()

creates

  uint x := 100


constructor
interface constructor(address<A> a)

creates

  int[3] arr := [1,2,3]

invariants

  arr[a.x] == 0
